Updated according to java 8