@@ -1,5 +1,6 @@
 package com.example.springboot.javapractice.streamapi;
 
+import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -19,14 +20,14 @@ public class StreamApiTest {
     }
 
     static void MappingOperations() {
-        List<Employee> employeeList = List.of(new Employee(1, "Virendra Shinde", 4.0, new Address("Street no1 ville parle", "Lane 3", "Mumbai", "Mumbai", "maharashtra", "India", 321321)),
+        List<Employee> employeeList = Arrays.asList(new Employee(1, "Virendra Shinde", 4.0, new Address("Street no1 ville parle", "Lane 3", "Mumbai", "Mumbai", "maharashtra", "India", 321321)),
                 new Employee(2, "Mohit", 12, new Address("123", "2", "Gurgaon", "Gurgaon", "Haryana", "India", 122003)),
                 new Employee(3, "Neha", 20, new Address("3243", "34", "Pune", "Pune", "Maharashtra", "India", 232244)),
                 new Employee(4, "Neeti", 34, new Address("123", "12", "Patiala", "Patiala", "Punjab", "India", 32424)),
                 new Employee(5, "Parminder", 12, new Address("G-123", "02", "Chandigarh", "Chandigarh", "Punjab", "India", 001234)),
                 new Employee(6, "Virendra Mishra", 50, new Address("01", "01", "Sultanpur", "Sultanpur", "Uttar Pradesh", "India", 228125)));
 
-        List<List<Employee>> listOfStateEmployees = List.of(employeeList.stream().filter(employee -> employee.address.state.equalsIgnoreCase("Punjab")).collect(Collectors.toList()),
+        List<List<Employee>> listOfStateEmployees = Arrays.asList(employeeList.stream().filter(employee -> employee.address.state.equalsIgnoreCase("Punjab")).collect(Collectors.toList()),
                 employeeList.stream().filter(employee -> employee.address.state.equalsIgnoreCase("Uttar Pradesh")).collect(Collectors.toList()),
                 employeeList.stream().filter(employee -> employee.address.state.equalsIgnoreCase("Maharashtra")).collect(Collectors.toList()),
                 employeeList.stream().filter(employee -> employee.address.state.equalsIgnoreCase("haryana")).collect(Collectors.toList()));
